Prevent editing textarea from overflowing out of bodyContent
Per suggestion by Daniel Friesen, this change adds a box-sizing specification to prevent the editing textarea from overflowing from the bodyContent in vector, monobook, and modern skins.

Bug: 40610

--- a/skins/common/commonElements.css
+++ b/skins/common/commonElements.css
@@ -231,6 +231,12 @@ textarea {
 	width: 100%;
 	padding: .1em;
 }
+#wpTextbox1 {
+	display: block;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
 select {
 	vertical-align: top;
 }
